# web-gallery_worker

./: .gitignore  README.md  schema.sql
src/: CMakeLists.txt  main.cpp
src/includes/: DbManager.cpp  DbManager.h  MetadataExtractor.cpp  MetadataExtractor.h
